# stis_gross

./: .gitignore  README.md  pyproject.toml
dev/: Defringing.ipynb
docs/source/: conf.py  index.rst
example_notebooks/: 2. PSF subtraction and modeling.ipynb  3. Injection and recovery.ipynb  Presentation figures.ipynb  straighten_trace.ipynb
example_notebooks/fringe_flat_correction/: 1b. Fringe flat correction.ipynb  of0i01010_trl.txt  of0i03010_trl.txt
src/gross/: contrast_curve_tools.py  diagnostic_plots.py  find_star.py  inject_signal.py  interp_psf.py  observing_sequence.py  retrieval_tools.py  sdi_tools.py  utils.py
src/gross/calstis_tools/: calstis_tools.py
