[project]
name = "stis_gross"
description = "Great Resource for Occulted STIS Spectroscopy / Get Rid Of Spectroscopic Speckles"
readme = "README.md"
authors = [
  { name = "Jonathan Aguilar", email = "jaguilar@stsci.edu" },
]
keywords = ["astronomy", "python"]
classifiers = ["Programming Language :: Python"]
requires-python = ">=3.12"
dependencies = [
  "astropy",
  "matplotlib",
  "numpy",
  "pandas",
  "pytest",
  "scipy",
]

dynamic = ["version"]

[options]
package_dir = 'src'

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]  
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "stsci_rtd_theme",
]

[project.license]
text = "MIT License"

[build-system]
requires = ["setuptools >= 61.2",
            "setuptools_scm[toml]>=7.1"]
build-backend = 'setuptools.build_meta'